# steamworks.lua

./: .editorconfig  .gitignore  LICENSE  README.md
.github/: CONTRIBUTING.md  copilot-instructions.md
lua/: achievements.lua  core.lua  steamapps.lua  steamfriends.lua  steamlua.lua  utility.lua
steam/: CMakeLists.txt  readme.md
steam/include/: export.hpp  steam_status.hpp  stub.hpp  version.hpp
steam/src/: achievements.cpp  core.cpp  steam_apps.cpp  steam_friends.cpp
